# mlflow-sentiment-classification

./: MLproject  pyproject.toml  train.sh
